#### Build 1002 ####

* Memory updates:
    * Re-implemented the available memory pool using a heap. Improved memory fragment management but reduced speed
* Added more memory related built-in functions
* Bug fixes:
    * Fixed that every 'null' occupied 8 bytes

#### Build 1001 ####

* Created TPL: Trash Programming Language