@@ -2,15 +2,12 @@
 <project version="4">
   <component name="ChangeListManager">
     <list default="true" id="aae2efb2-7778-4cc3-ae20-bcb51cee43a1" name="Default Changelist" comment="">
-      <change afterPath="$PROJECT_DIR$/bin/tpl_pre_processor.py" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/tp/fc.tp" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/spl_ast.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_ast.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/spl_environment.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_environment.py" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/bin/spl_interpreter.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_interpreter.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/spl_memory.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_memory.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/tp/base.sp" beforeDir="false" afterPath="$PROJECT_DIR$/tp/base.tp" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/tpl.py" beforeDir="false" afterPath="$PROJECT_DIR$/tpl.py" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/doc/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/doc/changelog.txt" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/doc/performance.txt" beforeDir="false" afterPath="$PROJECT_DIR$/doc/performance.txt" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/tp/perf.tp" beforeDir="false" afterPath="$PROJECT_DIR$/tp/perf.tp" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/tp/recur.sp" beforeDir="false" afterPath="$PROJECT_DIR$/tp/recur.tp" afterDir="false" />
     </list>
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -163,7 +160,7 @@
       <option name="ADD_SOURCE_ROOTS" value="true" />
       <EXTENSION ID="PythonCoverageRunConfigurationExtension" runner="coverage.py" />
       <option name="SCRIPT_NAME" value="$PROJECT_DIR$/tpl.py" />
-      <option name="PARAMETERS" value="-e tp/fc.tp" />
+      <option name="PARAMETERS" value="-e tp/perf.tp" />
       <option name="SHOW_COMMAND_LINE" value="false" />
       <option name="EMULATE_TERMINAL" value="false" />
       <option name="MODULE_MODE" value="false" />
@@ -233,6 +230,7 @@
       <workItem from="1575625940401" duration="1502000" />
       <workItem from="1575664687980" duration="7215000" />
       <workItem from="1576129330591" duration="8109000" />
+      <workItem from="1576804240077" duration="534000" />
     </task>
     <servers />
   </component>
@@ -240,31 +238,31 @@
     <option name="version" value="1" />
   </component>
   <component name="WindowStateProjectService">
-    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog" timestamp="1576133558640">
+    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog" timestamp="1576804774124">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog/0.0.1536.824@0.0.1536.824" timestamp="1576133558640" />
-    <state width="1493" height="210" key="GridCell.Tab.0.bottom" timestamp="1576136939711">
+    <state x="223" y="67" key="#com.intellij.execution.impl.EditConfigurationsDialog/0.0.1536.824@0.0.1536.824" timestamp="1576804774124" />
+    <state width="1493" height="210" key="GridCell.Tab.0.bottom" timestamp="1576804822796">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.bottom/0.0.1536.824@0.0.1536.824" timestamp="1576136939711" />
-    <state width="1493" height="210" key="GridCell.Tab.0.center" timestamp="1576136939711">
+    <state width="1493" height="210" key="GridCell.Tab.0.bottom/0.0.1536.824@0.0.1536.824" timestamp="1576804822796" />
+    <state width="1493" height="210" key="GridCell.Tab.0.center" timestamp="1576804822795">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.center/0.0.1536.824@0.0.1536.824" timestamp="1576136939711" />
-    <state width="1493" height="210" key="GridCell.Tab.0.left" timestamp="1576136939711">
+    <state width="1493" height="210" key="GridCell.Tab.0.center/0.0.1536.824@0.0.1536.824" timestamp="1576804822795" />
+    <state width="1493" height="210" key="GridCell.Tab.0.left" timestamp="1576804822795">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.left/0.0.1536.824@0.0.1536.824" timestamp="1576136939711" />
-    <state width="1493" height="210" key="GridCell.Tab.0.right" timestamp="1576136939711">
+    <state width="1493" height="210" key="GridCell.Tab.0.left/0.0.1536.824@0.0.1536.824" timestamp="1576804822795" />
+    <state width="1493" height="210" key="GridCell.Tab.0.right" timestamp="1576804822795">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.right/0.0.1536.824@0.0.1536.824" timestamp="1576136939711" />
+    <state width="1493" height="210" key="GridCell.Tab.0.right/0.0.1536.824@0.0.1536.824" timestamp="1576804822795" />
   </component>
   <component name="com.intellij.coverage.CoverageDataManagerImpl">
     <SUITE FILE_PATH="coverage/tpl3$spl.coverage" NAME="tpl Coverage Results" MODIFIED="1575626969342" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
     <SUITE FILE_PATH="coverage/spl3$spl_memory.coverage" NAME="spl_memory Coverage Results" MODIFIED="1574152361604" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/bin" />
-    <SUITE FILE_PATH="coverage/tpl3$tpl.coverage" NAME="tpl Coverage Results" MODIFIED="1576136939705" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
+    <SUITE FILE_PATH="coverage/tpl3$tpl.coverage" NAME="tpl Coverage Results" MODIFIED="1576804822779" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
     <SUITE FILE_PATH="coverage/spl3$compiler.coverage" NAME="compiler Coverage Results" MODIFIED="1575438441013" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$" />
     <SUITE FILE_PATH="coverage/spl3$spl_types.coverage" NAME="spl_types Coverage Results" MODIFIED="1575374052360" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/bin" />
     <SUITE FILE_PATH="coverage/tpl3$spl_memory.coverage" NAME="spl_memory Coverage Results" MODIFIED="1575671110224" SOURCE_PROVIDER="com.intellij.coverage.DefaultCoverageFileProvider" RUNNER="coverage.py" COVERAGE_BY_TEST_ENABLED="true" COVERAGE_TRACING_ENABLED="false" WORKING_DIRECTORY="$PROJECT_DIR$/bin" />
